# underrated-novelty-nlp-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: LLM_novelty_creativity_evaluation_benchmark_20260407_153617.jsonl  large_language_model_creative_generation_diversity_20260407_153822.jsonl
papers/: README.md
papers/pages/: 2407.02209_generative_monoculture_manifest.txt  2501.19361_creative_homogeneity_across_llms_manifest.txt  2510.27313_llm_novelty_semantic_similarity_manifest.txt  2604.01504_llm_output_diversity_manifest.txt  llm_recommender_popularity_bias_manifest.txt
results/: cross_model_convergence.csv  intermodel_overlap.csv  processed_responses.json  prompt_convergence_summary.csv  raw_responses.json  raw_responses_cache.jsonl  reddit_overlap.csv  semantic_diversity.csv  statistical_tests.json  unique_answer_rates.csv
src/: analyze_results.py  detailed_analysis.py  extract_items.py  run_experiment.py
